# vergen-cl

./: Cargo.toml  README.md  build.rs
src/: main.rs
vergen-git2-demo/: Cargo.toml  build.rs
vergen-git2-demo/src/: main.rs
vergen-gitcl-demo/: Cargo.toml  build.rs
vergen-gix-demo/: Cargo.toml  build.rs
vergen-gix-demo/src/: main.rs
