[package]
name = "vergen-cl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []

[dependencies]
anyhow = "1.0.99"
vergen-pretty = { version = "2.0.0", features = ["color"] }

[build-dependencies]
anyhow = "1.0.99"
rustversion = "1.0.22"
vergen-gix = { version = "1.0.9", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
    "si"
] }
