[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "A demo of the capabilities of the `vergen-gix` build tool"
documentation = "https://docs.rs/vergen-cl"
edition = "2024"
homepage = "https://github.com/rustyhorde/vergen-cl"
keywords = ["cargo", "instructions", "build", "tool"]
license = "MIT OR Apache-2.0"
name = "vergen-cl"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen-cl"
version = "0.2.0"

[features]
unstable = []

[dependencies]
anyhow = "1.0.99"
vergen-pretty = { version = "2.0.0", features = ["color"] }

[build-dependencies]
anyhow = "1.0.99"
rustversion = "1.0.22"
vergen-gix = { version = "2.0.0-beta.1", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "rustc",
    "si",
] }
