[workspace]
resolver = "3"

members = [
    "vergen-git2-demo",
    "vergen-gitcl-demo",
    "vergen-gix-demo",
]

[workspace.dependencies]
anyhow = "1.0.99"
rustversion = "1.0.22"
vergen-pretty = { version = "2.0.0", features = ["color"] }

# [patch.crates-io]
# vergen-gix = { path = "../vergen/vergen-gix" }
# vergen-gitcl = { path = "../vergen/vergen-gitcl" }
# vergen-git2 = { path = "../vergen/vergen-git2" }
